--- a/content/css/style.css
+++ b/content/css/style.css
@@ -22,10 +22,10 @@
     text-decoration: line-through;
     opacity: 0.5;
 }
-
+/* 
 .slide {
     transform: translateX(10rem);
     opacity: 0;
-}
+} */
 
 
